--- a/src/sass/layout/_components.scss
+++ b/src/sass/layout/_components.scss
@@ -69,7 +69,7 @@
 
             &::before {
                 position: absolute;
-                content: attr(data-content); /* Prints the value of the attribute */
+                content: attr(data-content);
                 top: 0;
                 left: 0;
                 color: var(--violet);
@@ -83,5 +83,20 @@
                 width: 100%;
             }
         }
+    }
+}
+
+@media only screen and (max-width:720px){
+    .project-tile {
+        flex-direction: column;
+        padding: 1.25rem;
+        justify-content: space-between;
+
+        .project-links {
+            margin-top: 1rem;
+            flex-direction: row;
+            justify-content: space-between;
+        }
+    
     }
 }
